// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RevenueBreakdown /> should render correctly with revenue data 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RevenueBreakdown
    revenueStatActions={
      Object {
        "fetch": [MockFunction] {
          "calls": Array [
            Array [
              Object {
                "seasonId": undefined,
              },
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        },
        "reset": [MockFunction],
      }
    }
    revenueStatState={
      Object {
        "loading": false,
        "ticketBreakdown": Array [
          Object {
            "id": 1,
            "inventory": 10000,
            "name": "Single Game",
            "revenue": 1000,
          },
          Object {
            "id": 2,
            "inventory": 5000,
            "name": "Group Tickets",
            "revenue": 1000,
          },
          Object {
            "id": 3,
            "inventory": 7000,
            "name": "Single Suites",
            "revenue": 1000,
          },
        ],
      }
    }
    type="revenue"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <styled.p>
          Revenue Breakdown
        </styled.p>,
        <styled.div
          height="0.75rem"
        />,
        <React.Fragment>
          <HorizontalBars
            colors={
              Array [
                "#024A8F",
                "#2670AE",
                "#4B98CF",
                "#7CBCDD",
                "#C4D2E1",
                "#817CB8",
                "#621F95",
              ]
            }
            data={
              Array [
                1000,
                1000,
                1000,
              ]
            }
          />
          <Flex
            flexWrap="wrap"
            margin="0 -1rem -1rem"
          >
            <FlexItem
              flex="0 0 auto"
              padding="1rem"
            >
              <LegendItem
                color="#024A8F"
                label="Single Game"
                value="$1,000"
              />
            </FlexItem>
            <FlexItem
              flex="0 0 auto"
              padding="1rem"
            >
              <LegendItem
                color="#2670AE"
                label="Group Tickets"
                value="$1,000"
              />
            </FlexItem>
            <FlexItem
              flex="0 0 auto"
              padding="1rem"
            >
              <LegendItem
                color="#4B98CF"
                label="Single Suites"
                value="$1,000"
              />
            </FlexItem>
          </Flex>
        </React.Fragment>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Revenue Breakdown",
        },
        "ref": null,
        "rendered": "Revenue Breakdown",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "height": "0.75rem",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <HorizontalBars
              colors={
                Array [
                  "#024A8F",
                  "#2670AE",
                  "#4B98CF",
                  "#7CBCDD",
                  "#C4D2E1",
                  "#817CB8",
                  "#621F95",
                ]
              }
              data={
                Array [
                  1000,
                  1000,
                  1000,
                ]
              }
            />,
            <Flex
              flexWrap="wrap"
              margin="0 -1rem -1rem"
            >
              <FlexItem
                flex="0 0 auto"
                padding="1rem"
              >
                <LegendItem
                  color="#024A8F"
                  label="Single Game"
                  value="$1,000"
                />
              </FlexItem>
              <FlexItem
                flex="0 0 auto"
                padding="1rem"
              >
                <LegendItem
                  color="#2670AE"
                  label="Group Tickets"
                  value="$1,000"
                />
              </FlexItem>
              <FlexItem
                flex="0 0 auto"
                padding="1rem"
              >
                <LegendItem
                  color="#4B98CF"
                  label="Single Suites"
                  value="$1,000"
                />
              </FlexItem>
            </Flex>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "colors": Array [
                "#024A8F",
                "#2670AE",
                "#4B98CF",
                "#7CBCDD",
                "#C4D2E1",
                "#817CB8",
                "#621F95",
              ],
              "data": Array [
                1000,
                1000,
                1000,
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <FlexItem
                  flex="0 0 auto"
                  padding="1rem"
                >
                  <LegendItem
                    color="#024A8F"
                    label="Single Game"
                    value="$1,000"
                  />
                </FlexItem>,
                <FlexItem
                  flex="0 0 auto"
                  padding="1rem"
                >
                  <LegendItem
                    color="#2670AE"
                    label="Group Tickets"
                    value="$1,000"
                  />
                </FlexItem>,
                <FlexItem
                  flex="0 0 auto"
                  padding="1rem"
                >
                  <LegendItem
                    color="#4B98CF"
                    label="Single Suites"
                    value="$1,000"
                  />
                </FlexItem>,
              ],
              "flexWrap": "wrap",
              "margin": "0 -1rem -1rem",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "0",
                "nodeType": "class",
                "props": Object {
                  "children": <LegendItem
                    color="#024A8F"
                    label="Single Game"
                    value="$1,000"
                  />,
                  "flex": "0 0 auto",
                  "padding": "1rem",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "color": "#024A8F",
                    "label": "Single Game",
                    "value": "$1,000",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "class",
                "props": Object {
                  "children": <LegendItem
                    color="#2670AE"
                    label="Group Tickets"
                    value="$1,000"
                  />,
                  "flex": "0 0 auto",
                  "padding": "1rem",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "color": "#2670AE",
                    "label": "Group Tickets",
                    "value": "$1,000",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "2",
                "nodeType": "class",
                "props": Object {
                  "children": <LegendItem
                    color="#4B98CF"
                    label="Single Suites"
                    value="$1,000"
                  />,
                  "flex": "0 0 auto",
                  "padding": "1rem",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "color": "#4B98CF",
                    "label": "Single Suites",
                    "value": "$1,000",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": Symbol(react.fragment),
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.p>
            Revenue Breakdown
          </styled.p>,
          <styled.div
            height="0.75rem"
          />,
          <React.Fragment>
            <HorizontalBars
              colors={
                Array [
                  "#024A8F",
                  "#2670AE",
                  "#4B98CF",
                  "#7CBCDD",
                  "#C4D2E1",
                  "#817CB8",
                  "#621F95",
                ]
              }
              data={
                Array [
                  1000,
                  1000,
                  1000,
                ]
              }
            />
            <Flex
              flexWrap="wrap"
              margin="0 -1rem -1rem"
            >
              <FlexItem
                flex="0 0 auto"
                padding="1rem"
              >
                <LegendItem
                  color="#024A8F"
                  label="Single Game"
                  value="$1,000"
                />
              </FlexItem>
              <FlexItem
                flex="0 0 auto"
                padding="1rem"
              >
                <LegendItem
                  color="#2670AE"
                  label="Group Tickets"
                  value="$1,000"
                />
              </FlexItem>
              <FlexItem
                flex="0 0 auto"
                padding="1rem"
              >
                <LegendItem
                  color="#4B98CF"
                  label="Single Suites"
                  value="$1,000"
                />
              </FlexItem>
            </Flex>
          </React.Fragment>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Revenue Breakdown",
          },
          "ref": null,
          "rendered": "Revenue Breakdown",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "height": "0.75rem",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <HorizontalBars
                colors={
                  Array [
                    "#024A8F",
                    "#2670AE",
                    "#4B98CF",
                    "#7CBCDD",
                    "#C4D2E1",
                    "#817CB8",
                    "#621F95",
                  ]
                }
                data={
                  Array [
                    1000,
                    1000,
                    1000,
                  ]
                }
              />,
              <Flex
                flexWrap="wrap"
                margin="0 -1rem -1rem"
              >
                <FlexItem
                  flex="0 0 auto"
                  padding="1rem"
                >
                  <LegendItem
                    color="#024A8F"
                    label="Single Game"
                    value="$1,000"
                  />
                </FlexItem>
                <FlexItem
                  flex="0 0 auto"
                  padding="1rem"
                >
                  <LegendItem
                    color="#2670AE"
                    label="Group Tickets"
                    value="$1,000"
                  />
                </FlexItem>
                <FlexItem
                  flex="0 0 auto"
                  padding="1rem"
                >
                  <LegendItem
                    color="#4B98CF"
                    label="Single Suites"
                    value="$1,000"
                  />
                </FlexItem>
              </Flex>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "colors": Array [
                  "#024A8F",
                  "#2670AE",
                  "#4B98CF",
                  "#7CBCDD",
                  "#C4D2E1",
                  "#817CB8",
                  "#621F95",
                ],
                "data": Array [
                  1000,
                  1000,
                  1000,
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <FlexItem
                    flex="0 0 auto"
                    padding="1rem"
                  >
                    <LegendItem
                      color="#024A8F"
                      label="Single Game"
                      value="$1,000"
                    />
                  </FlexItem>,
                  <FlexItem
                    flex="0 0 auto"
                    padding="1rem"
                  >
                    <LegendItem
                      color="#2670AE"
                      label="Group Tickets"
                      value="$1,000"
                    />
                  </FlexItem>,
                  <FlexItem
                    flex="0 0 auto"
                    padding="1rem"
                  >
                    <LegendItem
                      color="#4B98CF"
                      label="Single Suites"
                      value="$1,000"
                    />
                  </FlexItem>,
                ],
                "flexWrap": "wrap",
                "margin": "0 -1rem -1rem",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "0",
                  "nodeType": "class",
                  "props": Object {
                    "children": <LegendItem
                      color="#024A8F"
                      label="Single Game"
                      value="$1,000"
                    />,
                    "flex": "0 0 auto",
                    "padding": "1rem",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "color": "#024A8F",
                      "label": "Single Game",
                      "value": "$1,000",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "1",
                  "nodeType": "class",
                  "props": Object {
                    "children": <LegendItem
                      color="#2670AE"
                      label="Group Tickets"
                      value="$1,000"
                    />,
                    "flex": "0 0 auto",
                    "padding": "1rem",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "color": "#2670AE",
                      "label": "Group Tickets",
                      "value": "$1,000",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "2",
                  "nodeType": "class",
                  "props": Object {
                    "children": <LegendItem
                      color="#4B98CF"
                      label="Single Suites"
                      value="$1,000"
                    />,
                    "flex": "0 0 auto",
                    "padding": "1rem",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "color": "#4B98CF",
                      "label": "Single Suites",
                      "value": "$1,000",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": Symbol(react.fragment),
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`<RevenueBreakdown /> should render correctly with revenue data 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RevenueBreakdown
    revenueStatActions={
      Object {
        "fetch": [MockFunction] {
          "calls": Array [
            Array [
              Object {
                "seasonId": undefined,
              },
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        },
        "reset": [MockFunction],
      }
    }
    revenueStatState={
      Object {
        "loading": false,
        "ticketBreakdown": Array [
          Object {
            "id": 1,
            "inventory": 10000,
            "name": "Single Game",
            "revenue": 1000,
          },
          Object {
            "id": 2,
            "inventory": 5000,
            "name": "Group Tickets",
            "revenue": 1000,
          },
          Object {
            "id": 3,
            "inventory": 7000,
            "name": "Single Suites",
            "revenue": 1000,
          },
        ],
      }
    }
    type="inventory"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <styled.p>
          Tickets Sold Breakdown
        </styled.p>,
        <styled.div
          height="0.75rem"
        />,
        <React.Fragment>
          <HorizontalBars
            colors={
              Array [
                "#024A8F",
                "#2670AE",
                "#4B98CF",
                "#7CBCDD",
                "#C4D2E1",
                "#817CB8",
                "#621F95",
              ]
            }
            data={
              Array [
                undefined,
                undefined,
                undefined,
              ]
            }
          />
          <Flex
            flexWrap="wrap"
            margin="0 -1rem -1rem"
          >
            <FlexItem
              flex="0 0 auto"
              padding="1rem"
            >
              <LegendItem
                color="#024A8F"
                label="Single Game"
                value="--"
              />
            </FlexItem>
            <FlexItem
              flex="0 0 auto"
              padding="1rem"
            >
              <LegendItem
                color="#2670AE"
                label="Group Tickets"
                value="--"
              />
            </FlexItem>
            <FlexItem
              flex="0 0 auto"
              padding="1rem"
            >
              <LegendItem
                color="#4B98CF"
                label="Single Suites"
                value="--"
              />
            </FlexItem>
          </Flex>
        </React.Fragment>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Tickets Sold Breakdown",
        },
        "ref": null,
        "rendered": "Tickets Sold Breakdown",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "height": "0.75rem",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <HorizontalBars
              colors={
                Array [
                  "#024A8F",
                  "#2670AE",
                  "#4B98CF",
                  "#7CBCDD",
                  "#C4D2E1",
                  "#817CB8",
                  "#621F95",
                ]
              }
              data={
                Array [
                  undefined,
                  undefined,
                  undefined,
                ]
              }
            />,
            <Flex
              flexWrap="wrap"
              margin="0 -1rem -1rem"
            >
              <FlexItem
                flex="0 0 auto"
                padding="1rem"
              >
                <LegendItem
                  color="#024A8F"
                  label="Single Game"
                  value="--"
                />
              </FlexItem>
              <FlexItem
                flex="0 0 auto"
                padding="1rem"
              >
                <LegendItem
                  color="#2670AE"
                  label="Group Tickets"
                  value="--"
                />
              </FlexItem>
              <FlexItem
                flex="0 0 auto"
                padding="1rem"
              >
                <LegendItem
                  color="#4B98CF"
                  label="Single Suites"
                  value="--"
                />
              </FlexItem>
            </Flex>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "colors": Array [
                "#024A8F",
                "#2670AE",
                "#4B98CF",
                "#7CBCDD",
                "#C4D2E1",
                "#817CB8",
                "#621F95",
              ],
              "data": Array [
                undefined,
                undefined,
                undefined,
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <FlexItem
                  flex="0 0 auto"
                  padding="1rem"
                >
                  <LegendItem
                    color="#024A8F"
                    label="Single Game"
                    value="--"
                  />
                </FlexItem>,
                <FlexItem
                  flex="0 0 auto"
                  padding="1rem"
                >
                  <LegendItem
                    color="#2670AE"
                    label="Group Tickets"
                    value="--"
                  />
                </FlexItem>,
                <FlexItem
                  flex="0 0 auto"
                  padding="1rem"
                >
                  <LegendItem
                    color="#4B98CF"
                    label="Single Suites"
                    value="--"
                  />
                </FlexItem>,
              ],
              "flexWrap": "wrap",
              "margin": "0 -1rem -1rem",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "0",
                "nodeType": "class",
                "props": Object {
                  "children": <LegendItem
                    color="#024A8F"
                    label="Single Game"
                    value="--"
                  />,
                  "flex": "0 0 auto",
                  "padding": "1rem",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "color": "#024A8F",
                    "label": "Single Game",
                    "value": "--",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "class",
                "props": Object {
                  "children": <LegendItem
                    color="#2670AE"
                    label="Group Tickets"
                    value="--"
                  />,
                  "flex": "0 0 auto",
                  "padding": "1rem",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "color": "#2670AE",
                    "label": "Group Tickets",
                    "value": "--",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "2",
                "nodeType": "class",
                "props": Object {
                  "children": <LegendItem
                    color="#4B98CF"
                    label="Single Suites"
                    value="--"
                  />,
                  "flex": "0 0 auto",
                  "padding": "1rem",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "color": "#4B98CF",
                    "label": "Single Suites",
                    "value": "--",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": Symbol(react.fragment),
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.p>
            Tickets Sold Breakdown
          </styled.p>,
          <styled.div
            height="0.75rem"
          />,
          <React.Fragment>
            <HorizontalBars
              colors={
                Array [
                  "#024A8F",
                  "#2670AE",
                  "#4B98CF",
                  "#7CBCDD",
                  "#C4D2E1",
                  "#817CB8",
                  "#621F95",
                ]
              }
              data={
                Array [
                  undefined,
                  undefined,
                  undefined,
                ]
              }
            />
            <Flex
              flexWrap="wrap"
              margin="0 -1rem -1rem"
            >
              <FlexItem
                flex="0 0 auto"
                padding="1rem"
              >
                <LegendItem
                  color="#024A8F"
                  label="Single Game"
                  value="--"
                />
              </FlexItem>
              <FlexItem
                flex="0 0 auto"
                padding="1rem"
              >
                <LegendItem
                  color="#2670AE"
                  label="Group Tickets"
                  value="--"
                />
              </FlexItem>
              <FlexItem
                flex="0 0 auto"
                padding="1rem"
              >
                <LegendItem
                  color="#4B98CF"
                  label="Single Suites"
                  value="--"
                />
              </FlexItem>
            </Flex>
          </React.Fragment>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Tickets Sold Breakdown",
          },
          "ref": null,
          "rendered": "Tickets Sold Breakdown",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "height": "0.75rem",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <HorizontalBars
                colors={
                  Array [
                    "#024A8F",
                    "#2670AE",
                    "#4B98CF",
                    "#7CBCDD",
                    "#C4D2E1",
                    "#817CB8",
                    "#621F95",
                  ]
                }
                data={
                  Array [
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              />,
              <Flex
                flexWrap="wrap"
                margin="0 -1rem -1rem"
              >
                <FlexItem
                  flex="0 0 auto"
                  padding="1rem"
                >
                  <LegendItem
                    color="#024A8F"
                    label="Single Game"
                    value="--"
                  />
                </FlexItem>
                <FlexItem
                  flex="0 0 auto"
                  padding="1rem"
                >
                  <LegendItem
                    color="#2670AE"
                    label="Group Tickets"
                    value="--"
                  />
                </FlexItem>
                <FlexItem
                  flex="0 0 auto"
                  padding="1rem"
                >
                  <LegendItem
                    color="#4B98CF"
                    label="Single Suites"
                    value="--"
                  />
                </FlexItem>
              </Flex>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "colors": Array [
                  "#024A8F",
                  "#2670AE",
                  "#4B98CF",
                  "#7CBCDD",
                  "#C4D2E1",
                  "#817CB8",
                  "#621F95",
                ],
                "data": Array [
                  undefined,
                  undefined,
                  undefined,
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <FlexItem
                    flex="0 0 auto"
                    padding="1rem"
                  >
                    <LegendItem
                      color="#024A8F"
                      label="Single Game"
                      value="--"
                    />
                  </FlexItem>,
                  <FlexItem
                    flex="0 0 auto"
                    padding="1rem"
                  >
                    <LegendItem
                      color="#2670AE"
                      label="Group Tickets"
                      value="--"
                    />
                  </FlexItem>,
                  <FlexItem
                    flex="0 0 auto"
                    padding="1rem"
                  >
                    <LegendItem
                      color="#4B98CF"
                      label="Single Suites"
                      value="--"
                    />
                  </FlexItem>,
                ],
                "flexWrap": "wrap",
                "margin": "0 -1rem -1rem",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "0",
                  "nodeType": "class",
                  "props": Object {
                    "children": <LegendItem
                      color="#024A8F"
                      label="Single Game"
                      value="--"
                    />,
                    "flex": "0 0 auto",
                    "padding": "1rem",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "color": "#024A8F",
                      "label": "Single Game",
                      "value": "--",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "1",
                  "nodeType": "class",
                  "props": Object {
                    "children": <LegendItem
                      color="#2670AE"
                      label="Group Tickets"
                      value="--"
                    />,
                    "flex": "0 0 auto",
                    "padding": "1rem",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "color": "#2670AE",
                      "label": "Group Tickets",
                      "value": "--",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "2",
                  "nodeType": "class",
                  "props": Object {
                    "children": <LegendItem
                      color="#4B98CF"
                      label="Single Suites"
                      value="--"
                    />,
                    "flex": "0 0 auto",
                    "padding": "1rem",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "color": "#4B98CF",
                      "label": "Single Suites",
                      "value": "--",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": Symbol(react.fragment),
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`<RevenueBreakdown /> should render the loading state correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RevenueBreakdown
    revenueStatActions={
      Object {
        "fetch": [MockFunction] {
          "calls": Array [
            Array [
              Object {
                "seasonId": undefined,
              },
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        },
        "reset": [MockFunction],
      }
    }
    revenueStatState={
      Object {
        "loading": true,
        "ticketBreakdown": Array [
          Object {
            "id": 1,
            "inventory": 10000,
            "name": "Single Game",
            "revenue": 1000,
          },
          Object {
            "id": 2,
            "inventory": 5000,
            "name": "Group Tickets",
            "revenue": 1000,
          },
          Object {
            "id": 3,
            "inventory": 7000,
            "name": "Single Suites",
            "revenue": 1000,
          },
        ],
      }
    }
    type="revenue"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
